--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -9,7 +9,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
+    - name: Swift tests
       run: |
-      export TEST_SECRET=$DARKSKY_SECRET
-      swift test
+        export TEST_SECRET=$DARKSKY_SECRET
+        swift test
