--- a/.swiftpm/xcode/xcshareddata/xcschemes/HPDarkSkyTests.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/HPDarkSkyTests.xcscheme
@@ -14,7 +14,8 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "HPDarkSkyTests"
