--- a/.swiftpm/xcode/xcshareddata/xcschemes/HPDarkSky.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/HPDarkSky.xcscheme
@@ -40,7 +40,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "HPDarkSky"
+            BuildableName = "HPDarkSky"
+            BlueprintName = "HPDarkSky"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
